# rosetta

./: Cargo.toml  README.md
benches/: main.rs
hundred_prisoners/: Cargo.toml
hundred_prisoners/benches/: main.rs
hundred_prisoners/src/: lib.rs  main.rs
list_comprehensions/: Cargo.toml
list_comprehensions/benches/: main.rs
list_comprehensions/src/: lib.rs
parallel_brute_force/: Cargo.toml
parallel_brute_force/benches/: main.rs
parallel_brute_force/src/: lib.rs  main.rs
reverse_a_string/: Cargo.toml  README.md
reverse_a_string/src/: lib.rs
sorting/: Cargo.toml
sorting/benches/: main.rs
src/: lib.rs
timing/: Cargo.toml  README.md
timing/benches/: main.rs
timing/src/: main.rs
